# observability_aware_control

./: .env  .envrc  README.md  pyproject.toml
config/: leader_follower_robot_path.npz  planar_robot_control_experiment.toml  quadrotor_control_experiment.toml
examples/: generate_quadrotor_trajectory.py  gramian_shootout.py  quadrotor_cooperative_navigation.py  simple_robot_cooperative_navigation.py
src/example_lib/math/: __init__.py  rotation.py
src/example_lib/misc/: geometric_controller.py  simple_ekf.py
src/example_lib/models/: inter_quadrotor_pose.py  leader_follower_quadrotors.py  leader_follower_robots.py  quadrotor.py  simple_robot.py
src/example_lib/visualization/: visualization.py
src/observability_aware_control/: e2log.py  elog.py  integrator.py  lie_derivative.py  log_interface.py  observability_aware_controller.py  observability_cost.py  observability_cost_function.py  stlog.py  typing.py
src/observability_aware_control/utils/: __init__.py  animation.py  optim_utils.py  utils.py
symbolic_algebra/: observability_analysis.m
tests/: test_lie_differentiation.py  test_numerical_integration.py  test_stlog.py
tests/test_lib/models/: symbolic_simple_robot.py
