[project]
authors = [
  { name = "H S Helson Go", email = "hei.go@mail.utoronto.ca" },
  { name = "CL-Chong", email = "chonpselements@gmail.com" },
]
name = "observability_aware_control"
version = "0.0.1"
description = "Observability (Gramian)-based control and path planning"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "equinox>=0.10.4",
    "jax[cuda12]",
    "matplotlib>=3.7.5",
    "minsnap-trajectories>=0.1.2",
    "tqdm",
]
optional-dependencies = { "tests" = ["pytest", "casadi"] }

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = ["src"]

[tool.isort]
profile = "black"
